# aoc2022

./: Cargo.toml  README.md
src/day01a/: main.rs
src/day01b/: main.rs
src/day02a/: main.rs
src/day02b/: main.rs
src/day03a/: main.rs
src/day03b/: main.rs
src/day04a/: main.rs
src/day04b/: main.rs
src/day05a/: main.rs
src/day05b/: main.rs
src/day06a/: main.rs
src/day06b/: main.rs
src/day07a/: main.rs
src/day07b/: main.rs
src/day08a/: main.rs
src/day08b/: main.rs
