[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
itertools="0.10"
chumsky="0.8"
indextree = "4.5"


[[bin]]
name = "day01a"
path = "src/day01a/main.rs"

[[bin]]
name = "day01b"
path = "src/day01b/main.rs"

[[bin]]
name = "day02a"
path = "src/day02a/main.rs"

[[bin]]
name = "day02b"
path = "src/day02b/main.rs"

[[bin]]
name = "day03a"
path = "src/day03a/main.rs"

[[bin]]
name = "day03b"
path = "src/day03b/main.rs"

[[bin]]
name = "day04a"
path = "src/day04a/main.rs"

[[bin]]
name = "day04b"
path = "src/day04b/main.rs"

[[bin]]
name = "day05a"
path = "src/day05a/main.rs"

[[bin]]
name = "day05b"
path = "src/day05b/main.rs"

[[bin]]
name = "day06a"
path = "src/day06a/main.rs"

[[bin]]
name = "day06b"
path = "src/day06b/main.rs"

[[bin]]
name = "day07a"
path = "src/day07a/main.rs"

[[bin]]
name = "day07b"
path = "src/day07b/main.rs"

[[bin]]
name = "day08a"
path = "src/day08a/main.rs"